RESOLVED FIXED 289469
REGRESSION(291600@main): TestWebKitAPI.GPUProcess.RelaunchOnCrash is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=289469
Summary REGRESSION(291600@main): TestWebKitAPI.GPUProcess.RelaunchOnCrash is a consta...
Dawn Morningstar
Reported 2025-03-10 09:47:51 PDT
TestWebKitAPI.GPUProcess.RelaunchOnCrash is a constant failure after 291600@main https://commits.webkit.org/291600@main, this bug is interesting because 291425@main seems to have partially fixed the bug, and then 291600@main appears to have undone that fix. HISTORY: https://results.safari.apple.com/?suite=api-tests&test=TestWebKitAPI.GPUProcess.RelaunchOnCrash TEST-RUN: https://build.webkit.org/#/builders/1224/builds/1317 STDIO: https://build.webkit.org/#/builders/1224/builds/1317/steps/23/logs/stdio FAILURE: Failed TestWebKitAPI.GPUProcess.RelaunchOnCrash 2025-03-10 08:24:07.835 TestWebKitAPI[64439:1330305] +[IMKClient subclass]: chose IMKClient_Modern LEAK: 1 WebProcessPool /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm:100 Value of: [webView _isPlayingAudio] Actual: false Expected: true
Attachments
Radar WebKit Bug Importer
Comment 1 2025-03-10 09:48:41 PDT
Alex Christensen
Comment 2 2025-03-14 14:28:33 PDT
EWS
Comment 3 2025-03-17 07:20:29 PDT
Committed 292265@main (4b60d193835e): <https://commits.webkit.org/292265@main> Reviewed commits have been landed. Closing PR #42510 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.