REGRESSION(291600@main): TestWebKitAPI.GPUProcess.RelaunchOnCrash is a constant failure https://bugs.webkit.org/show_bug.cgi?id=289469 rdar://146666667

Reviewed by Youenn Fablet.

In this test, RemoteAudioDestinationProxy::startRenderingThread is called twice.
The second time, offThreadRendering hits the "break" statement because m_shouldStopThread
was not being reset after RemoteAudioDestinationProxy::gpuProcessConnectionDidClose called
stopRenderingThread.

When audio playing stops, AudioContext::isPlayingAudioDidChange dispatches to the main thread
to tell it to tell the UI process that the media state changed through WebPage::isPlayingMediaDidChange.
291340@main made it a race condition between the UI process being informed of the new GPU process
and the UI process being informed of the audio stopping.  291600@main subtly changed the timing
of main thread behavior, especially in debug builds, which made the audio lose the race more often.

* Source/WebKit/WebProcess/GPU/media/RemoteAudioDestinationProxy.cpp:
(WebKit::RemoteAudioDestinationProxy::gpuProcessConnectionDidClose):

Canonical link: https://commits.webkit.org/292265@main